--- a/app/templates/leaderboard.html
+++ b/app/templates/leaderboard.html
@@ -1,5 +1,25 @@
-{% extends 'base.html' %}
+{% extends 'portal.html' %}
+
+{% block title %}Leaderboard - {{ portal.replace("_", " ").title() }}{% endblock %}
 
 {% block content %}
-    {{ users }}
+    <div class="mt-5 pt-5"></div>
+    <table class="table table-striped table-hover">
+        <thead>
+        <tr style="background-color: #EB6864; color: #fff;">
+            <th>#</th>
+            <th>User</th>
+            <th>Score</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for idx, user in users %}
+        <tr>
+            <td>{{ idx + 1 }}</td>
+            <td>{{ user[0].split('@')[0].replace(".", " ").title() }}</td>
+            <td>{{ user[1] }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
