--- a/app/templates/portal.html
+++ b/app/templates/portal.html
@@ -15,7 +15,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#drop">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand mr-5" href="/">Felicity 2k18</a>
+    <a class="navbar-brand mr-5" href="/"><img src="https://felicity.iiit.ac.in/buzz/static/images/logo.png" style="height: 60px;"></a>
     <div class="collapse navbar-collapse" id="drop">
         <ul class="navbar-nav">
             <li class="nav-item">
@@ -45,6 +45,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+<script>
+$(".alert").delay(1000).slideUp(500, function() {
+    $(this).alert('close');
+});
+</script>
 {% block scripts %}
 {% endblock %}
 </body>
