Added static files

--- a/app/templates/portal.html
+++ b/app/templates/portal.html
@@ -15,7 +15,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#drop">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand mr-5" href="/"><img src="https://felicity.iiit.ac.in/buzz/static/images/logo.png" style="height: 60px;"></a>
+    <a class="navbar-brand mr-5" href="/"><img src="{{ url_for('static', filename='img/logo1.png') }}" style="height: 60px;"></a>
     <div class="collapse navbar-collapse" id="drop">
         <ul class="navbar-nav">
             <li class="nav-item">
