--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,7 +1,7 @@
 #chartdiv {
     width: 90%;
     height: 75%;
-    background-color: #e9e9e9;
+    background-color: #f7f7f7;
     margin: 2% 5%;
 }
 
@@ -14,7 +14,7 @@ p {
 
 body {
     margin: 1% 0;
-    background-color: #e9e9e9;
+    background-color: #f7f7f7;
 }
 
 img {
