--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,15 +1,55 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}Felicity Buzz 2k17</title>
+    <link rel="stylesheet" href="https://bootswatch.com/4-alpha/journal/bootstrap.min.css">
+    <title>{% block title %}{% endblock %}</title>
+    <style>
+        .navbar-nav .nav-item+.nav-item {
+            margin-left: 0;
+        }
+    </style>
     {% block styles %}
     {% endblock %}
 </head>
 <body>
-{% block content %}
-{% endblock %}
-
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#drop">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand mr-5" href="/"><img src="{{ url_for('static', filename='img/logo1.png') }}" style="height: 60px;"></a>
+    <div class="collapse navbar-collapse" id="drop">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for(portal+".route_index") }}">{{ portal.replace("_", " ").title() }}</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ url_for(portal+".route_leaderboard") }}">Leaderboard</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link text-primary" href="#">{{ score }}pts</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="drop2" data-toggle="dropdown">{{ user.split('@')[0] }}</a>
+                <div class="dropdown-menu" aria-labelledby="drop2">
+                    <a class="dropdown-item" href="/logout">Logout</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container my-5">
+    {% block content %}
+    {% endblock %}
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.5/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+<script>
+$(".alert").delay(1000).slideUp(500, function() {
+    $(this).alert('close');
+});
+</script>
 {% block scripts %}
 {% endblock %}
 </body>
