--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,23 +4,20 @@
 
     <!-- Styles -->
     <link href='https://fonts.googleapis.com/css?family=Chewy' rel='stylesheet'>
-    <link rel="stylesheet" href="https://felicity.iiit.ac.in/buzz/static/css/export.css" type="text/css"/>
-    <link rel="stylesheet" href="/static/css/index.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 
 <body>
     <div class="container text-center">
-        <img src="https://felicity.iiit.ac.in/buzz/static/images/logo.png" width="200px"/>
+        <img src="{{ url_for('static', filename='img/logo1.png') }}" width="200px"/>
         <p>Around the world in 3 days</p>
         <div id="chartdiv"></div>
     </div>
-    <br/>
 
     <!-- Scripts -->
-    <script src="https://felicity.iiit.ac.in/buzz/static/js/ammap.js" type="text/javascript"></script>
-    <script src="https://felicity.iiit.ac.in/buzz/static/js/worldLow.js" type="text/javascript"></script>
-    <script src="https://felicity.iiit.ac.in/buzz/static/js/export.min.js" type="text/javascript"></script>
-    <script src="https://felicity.iiit.ac.in/buzz/static/js/light.js" type="text/javascript"></script>
-    <script src="/static/js/ammap_config.js"></script>
+    <script src="{{ url_for('static', filename='js/ammap.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/worldLow.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/light.js') }}" type="text/javascript"></script>
+    <script src="{{ url_for('static', filename='js/ammap_config.js') }}" type="text/javascript"></script>
 </body>
 </html>
